minishift/templates/logsender-boot/service-logsender.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: ErikFetaFilOnDiskett
  labels:
    app: logsender
    environment: test
  name: logsender
spec:
  ports:
  - name: 9099-tcp
    port: 9099
    protocol: TCP
    targetPort: 9099
  selector:
    deploymentconfig: logsender
  sessionAffinity: None
  type: ClusterIP
